# kindle2notion

./: .envrc  .gitignore  main.py  pyproject.toml
kindle2notion/: __main__.py  exporting.py  models.py  package_logger.py  parsing.py  reading.py
